# ai-sparringpartner-talentcoaches

./: .codexignore  .env.example  .gitignore  AGENTS.md  GETTING_STARTED.md  README.md  app.py  generate_standalone_html.py  pyproject.toml  rag.py  requirements.txt
.streamlit/: config.toml
agent-docs/: AGENTS.md  ARCHITECTURE.md  CONSTITUTION.md  FEATURES.md  MEMORY.md  PROMPTS.md  RAG-AANPAK.md  SYSTEEM-PROMPT.md  USER-STORIES.md  canvas-data.pptx
agent-docs/past-big-instructions/: codex_instruction_update_repo.md
docs/: som-huisstijl.md
example-data/: readme.md  workshop_scenarios.csv
kennisbank/: 00-kennisdomeinen.md  INDEX.md  README.md  index_meta.json  test.txt  unique_urls.txt  url_filename_map.tsv
kennisbank/pages/: 000_som-zes-stappen-monitoren-zelfrapportage.md  001_train-de-trainer-org-wp-content-uploads-2024-09-beek-update-on-motor-learning-pa.md  002_sport-gericht-nl-site-assets-files-1470-sg-2022-6-02-07-beek-pdf.md  003_researchgate-net-publication-376587244-motorisch-leren-een-update-deel-3-implici.md  004_sport-gericht-nl-site-assets-files-1478-sg-2023-3-02-09-beek-pdf.md  005_sport-gericht-nl-site-assets-files-1479-sg-2023-4-08-13-beek-pdf.md  006_researchgate-net-publication-376595764-motorisch-leren-een-update-deel-6-de-dyna.md  007_research-vu-nl-ws-portalfiles-portal-283149311-sg-2023-6-12-18-beek-deel-7-pdf.md  008_research-vu-nl-ws-portalfiles-portal-328131767-sg-2024-1-18-26-beek-pdf.md  011_doi-org-10-3390-jfmk6010030.md  (+134 more)
legacy-code/: .env.example  README.md  app.py  requirements.txt
secret-data/: readme.md
(+63 files in other folders)
